plugins {
    id 'application'
}

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15

}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

application {
    mainModule = 'org.monospark.remix.sample'
    mainClass = 'org.monospark.remix.sample.BuilderSample'
    applicationDefaultJvmArgs = ["--enable-preview"]
}


group 'org.monospark.remix'
version '0.1'

repositories {
    mavenCentral()
}


dependencies {
    implementation project(':core')
}

